[project]
name = "xjfx"
version = "1.1.0"
authors = [
  { name="Justin Findlay", email="justin@findlay.space" },
]
description = "Collection of simple utility functions and classes that extend standard library functionality."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama",
]

[project.urls]
"Homepage" = "https://github.com/jfindlay/xjfx/"
"Bug Tracker" = "https://github.com/jfindlay/xjfx/issues/"

[build-system]
requires = [
    "build",
    "setuptools",
    "tox>=4.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["xjfx"]


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "broad-exception-caught",
    "consider-using-sys-exit",
    "fixme",
    "inconsistent-return-statements",
    "logging-fstring-interpolation",
    "redefined-builtin",
    "too-few-public-methods",
    "too-many-arguments",
]

[tool.pylint.FORMAT]
max-line-length = 128

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.ruff]
line-length = 128
